feat:add my information

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     window.$docsify = {
       search: 'auto',
       loadSidebar: 'sidebar.md',
+      loadNavbar: 'navbar.md',
       subMaxLevel: 1,
       auto2top: true,
       autoHeader: true,
-      alias: {
-        '/.*/_sidebar.md': '/_sidebar.md',
-      },
+      repo: 'https://github.com/crackeer',
       count: {
         countable: true,
         fontsize: '0.9em',
