--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="description" content="编程记录，有关Golang/Rust/NodeJS/K3s的笔记">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="./_static/core.min.css">
+  <link rel="icon" href="favicon.png" type="image/x-icon" />
 </head>
 
 <body>
